# Chosa-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  implementation_plan_Version2.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01869554d538_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/routers/: chat.py  intelligence.py  patterns.py  video.py
backend/app/api/v1/: actions.py  agent.py  alerts.py  chaos.py  demo.py  explain.py  market.py  news.py  ops.py  orders.py  portfolio.py  telegram_bot.py  topology.py
backend/app/control/: __init__.py  kill_switch.py
backend/app/core/: __init__.py  circuit_breaker.py  dependency_guards.py  enums.py  events.py  exceptions.py  feature_flags.py  observability.py  schemas.py  security.py
backend/app/decision/: __init__.py  cost_tracker.py  engine.py
backend/app/enrichment/: __init__.py  filing_scraper.py  retriever.py  scraper.py
backend/app/execution/: __init__.py  service.py
backend/app/ingestion/: anomaly.py  filing_monitor.py  indicators.py  market_hours.py  worker.py
backend/app/ingestion/providers/: __init__.py  mock.py  upstox.py
backend/app/notifications/: __init__.py  service.py  telegram.py
backend/app/orchestrator/: __init__.py  graph.py  state.py  worker.py
backend/app/orchestrator/nodes/: __init__.py  enrich.py  policy.py  publish.py  synthesize.py
backend/app/policy/: __init__.py  engine.py
backend/app/portfolio/: service.py
backend/app/qualification/: __init__.py  service.py  worker.py
backend/app/schemas/: __init__.py  intelligence.py  patterns.py  video.py
backend/app/services/: candlestick_agent.py  chat_service.py  intelligence_service.py  ohlcv_provider.py  pattern_scan_service.py  portfolio_video_service.py  script_service.py  video_engine_service.py
backend/app/streams/: __init__.py  consumer.py  dlq.py  producer.py
backend/scripts/: seed_mock_portfolio.py
backend/tests/: conftest.py  test_policy.py  test_qualification.py  test_schemas.py
docs/: RUN_GUIDE.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  store.ts
(+22 files in other folders)
