[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-hunter"
version = "0.1.0"
description = "Autonomous Financial Agent Platform"
requires-python = ">=3.12"
dependencies = [
    # ── API Framework ──
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # ── Database ──
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    
    # ── Redis ──
    "redis[hiredis]>=5.2.0",
    
    # ── Agent Orchestrator ──
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    
    # ── LLM ──
    "groq>=0.13.0",
    "instructor>=1.7.0",
    
    # ── Enrichment ──
    "crawl4ai>=0.4.0",
    "sentence-transformers>=3.3.0",
    "httpx>=0.28.0",
    
    # ── Observability ──
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-prometheus>=0.49b0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    
    # ── Security ──
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    
    # ── Market Data ──
    "upstox-python-sdk>=2.10.0",
    "protobuf>=5.29.0",
    "websockets>=14.0",
    
    # ── Utilities ──
    "numpy>=2.0.0",
    "python-multipart>=0.0.17",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
